Renderer 클래스 구조 변경 - Main, Popup에 따라 다른 페이지를 호출하도록 수정 - browserFactory 클래스 추가 - browserFactory 사용을 위한 기타 클래스 추가

--- a/src/renderer/src/popup/index.html
+++ b/src/renderer/src/popup/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Electron</title>
-    <link rel="stylesheet" href="./src/assets/styles/normalize.css" />
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
     />
   </head>
+
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/main/index.ts"></script>
+    <script type="module" src="./index.ts"></script>
   </body>
 </html>
