체크리스트 화면 개발 - vue-router 추가 - common css 추가 - 체크리스트관련 컴포넌트 추가

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Electron</title>
     <link rel="stylesheet" href="./src/assets/styles/normalize.css" />
+    <link rel="stylesheet" href="./src/assets/styles/common.css" />
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
